--- a/src/app/customer/components/customer-home/customer-home.component.html
+++ b/src/app/customer/components/customer-home/customer-home.component.html
@@ -1,7 +1,1 @@
-<p>customer-home works!</p>
-<input
-  type="button"
-  class="button is-danger"
-  value="Sign out"
-  (click)="signOut()"
-/>
+HOME
