--- a/src/app/customer/components/customer-home/customer-home.component.html
+++ b/src/app/customer/components/customer-home/customer-home.component.html
@@ -1,22 +1,38 @@
-<nz-table #basicTable [nzData]="listOfData">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Age</th>
-      <th>Address</th>
-      <th>Action</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let data of basicTable.data">
-      <td>{{ data.name }}</td>
-      <td>{{ data.age }}</td>
-      <td>{{ data.address }}</td>
-      <td>
-        <a>Action 一 {{ data.name }}</a>
-        <nz-divider nzType="vertical"></nz-divider>
-        <a>Delete</a>
-      </td>
-    </tr>
-  </tbody>
-</nz-table>
+<div nz-row>
+  <div nz-col nzSpan="24">
+    <nz-select
+      style="width:100%;"
+      nzShowSearch
+      nzAllowClear
+      nzPlaceHolder="Search provider..."
+    >
+      <nz-option nzLabel="Jack" nzValue="jack"></nz-option>
+    </nz-select>
+  </div>
+</div>
+<div nz-row style="margin-top: 10px;">
+  <div nz-col nzSpan="24">
+    <nz-table #basicTable [nzData]="listOfData">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Age</th>
+          <th>Address</th>
+          <th>Action</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let data of basicTable.data">
+          <td>{{ data.name }}</td>
+          <td>{{ data.age }}</td>
+          <td>{{ data.address }}</td>
+          <td>
+            <a>Action 一 {{ data.name }}</a>
+            <nz-divider nzType="vertical"></nz-divider>
+            <a>Delete</a>
+          </td>
+        </tr>
+      </tbody>
+    </nz-table>
+  </div>
+</div>
