--- a/src/app/customer/components/customer-layout/customer-layout.component.html
+++ b/src/app/customer/components/customer-layout/customer-layout.component.html
@@ -23,9 +23,17 @@
         <i nz-icon nzType="home"></i>
         <span>Home</span>
       </li>
+      <li nz-menu-item [routerLink]="['/customer/profile']" nzMatchRouter>
+        <i nz-icon nzType="user"></i>
+        <span>Profile</span>
+      </li>
       <li nz-menu-item [routerLink]="['/customer/history']" nzMatchRouter>
         <i nz-icon nzType="history"></i>
         <span>History</span>
+      </li>
+      <li nz-menu-item (click)="signOut()">
+        <i nz-icon nzType="logout"></i>
+        <span>Sign out</span>
       </li>
     </ul>
   </nz-sider>
