Implement keep token, user in ui localstorage, Add http interceptor for jwt, unauthorize request

--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -28,6 +28,14 @@
         </nz-form-item>
         <nz-form-item>
           <nz-form-control>
+            <nz-radio-group formControlName="type">
+              <label nz-radio nzValue="customer">Customer</label>
+              <label nz-radio nzValue="provider">Provider</label>
+            </nz-radio-group>
+          </nz-form-control>
+        </nz-form-item>
+        <nz-form-item>
+          <nz-form-control>
             <a class="login-form-forgot" class="login-form-forgot"
               >Forgot password</a
             >
