Implement register module

--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -48,7 +48,7 @@
               Log in
             </button>
             Or
-            <a>register now!</a>
+            <a [routerLink]="['/register']" target="_blank">register now!</a>
           </nz-form-control>
         </nz-form-item>
         <nz-alert
