Implement edit customer profile, Get providers and binding to select input

--- a/src/app/components/user-detail/user-detail.component.html
+++ b/src/app/components/user-detail/user-detail.component.html
@@ -37,7 +37,7 @@
   </nz-form-item>
   <nz-form-item>
     <nz-form-control [nzOffset]="4" [nzSpan]="20">
-      <button nz-button nzType="primary">
+      <button nz-button nzType="primary" (click)="editClick.emit(null)">
         Edit
       </button>
     </nz-form-control>
